cmake_minimum_required(VERSION 3.18)

add_subdirectory(blink-first-example)
add_subdirectory(blink-gpio-interface)
add_subdirectory(shift-registers-example)
add_subdirectory(timer-interface-test)
add_subdirectory(ultrasonic-measure)
add_subdirectory(external-interrupt)
add_subdirectory(software-pwm)
add_subdirectory(serial-eeprom-example)
add_subdirectory(oled-display-example)
add_subdirectory(spi-example)
add_subdirectory(tft-lcd-example)