cmake_minimum_required(VERSION 3.18)

add_subdirectory(stm32f401-devices)
add_subdirectory(external-devices)

add_subdirectory(blink-first-example)
add_subdirectory(blink-gpio-interface)
add_subdirectory(shift-registers-example)
add_subdirectory(timer-interface-test)
add_subdirectory(ultrasonic-measure)
